--- a/Makefile.local
+++ b/Makefile.local
@@ -5,7 +5,7 @@ CC = mpicc
 LD = $(FC)
 AR=ar rcs
 
-FFLAGS = -Ibuild -Jinclude -cpp -ffree-line-length-none
+FFLAGS = -Ibuild -Jinclude -cpp -ffree-line-length-none -fallow-argument-mismatch
 #  Use this flag on newer compilers with stricter bounds checking
 #FFLAGS = -fallow-argument-mismatch
 
