--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -49,16 +49,18 @@ FSRC = src/pfasst.f90 \
        src/pf_ndsysarray_encap.f90 \
        src/pf_zndsysarray_encap.f90 \
        src/pf_zndarray_encap.f90 \
-#       src/pf_exp_sweeper.f90 \
-#       src/pf_fexp_sweeper.f90 \
-#       src/pf_imex_sweeper.f90 \
-#       src/pf_imexR_sweeper.f90 \
-#       src/pf_imexQ_oc_sweeper.f90 \
-#       src/pf_imk_sweeper.f90 \
-#       src/pf_magpicard_sweeper.f90 \
-#       src/pf_misdcQ_sweeper.f90 \
-#       src/pf_misdcQ_oc_sweeper.f90 \
-#       src/pf_verlet_sweeper.f90
+       src/pf_exp_sweeper.f90 \
+       src/pf_fexp_sweeper.f90 \
+       src/pf_imex_sweeper.f90 \
+       src/pf_imexR_sweeper.f90 \
+       src/pf_imexQ_oc_sweeper.f90 \
+       src/pf_imk_sweeper.f90 \
+       src/pf_magpicard_sweeper.f90 \
+       src/pf_misdcQ_sweeper.f90 \
+       src/pf_misdcQ_oc_sweeper.f90 \
+       src/pf_verlet_sweeper.f90 \
+       src/pf_fexp_sweeper.f90 \
+#       src/pf_amisdc.f90  pf_amisdcQ.f90 \
 
 #   AMReX options
 ifeq ($(USE_AMREX),TRUE)
