Updated PFASST Makefile.defaults - set USE_FFT and USE_FFTW to true

--- a/Makefile.defaults.cori
+++ b/Makefile.defaults.cori
@@ -12,7 +12,8 @@ USE_PETSC ?= FALSE
 USE_HYPRE ?= FALSE
 USE_SUNDIALS ?= FALSE
 USE_AMREX ?= FALSE
-USE_FFT ?= FALSE
+USE_FFT ?= TRUE
+USE_FFTW ?= TRUE
 
 
 #  File for compiler options
