--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -12,7 +12,8 @@ USE_PETSC ?= FALSE
 USE_HYPRE ?= FALSE
 USE_SUNDIALS ?= FALSE
 USE_AMREX ?= FALSE
-USE_FFT ?= FALSE
+USE_FFT ?= TRUE
+USE_FFTW ?= TRUE
 
 
 #  File for compiler options
@@ -59,8 +60,7 @@ FSRC = src/pfasst.f90 \
        src/pf_misdcQ_sweeper.f90 \
        src/pf_misdcQ_oc_sweeper.f90 \
        src/pf_verlet_sweeper.f90 \
-       src/pf_fexp_sweeper.f90 \
-#       src/pf_amisdc.f90  pf_amisdcQ.f90 \
+       src/pf_fexp_sweeper.f90
 
 #   AMReX options
 ifeq ($(USE_AMREX),TRUE)
